--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,5 @@
     "name": "zey/covid",
     "description": "covidtesting",
     "type": "project",
-    "require": {"ext-mysql":"*"}
+    "require": {}
 }
